Removed line wrapping from code blocks. Modified the hard line wraps in the blog posts. Fixes #3.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -193,9 +193,6 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f9f9f9;
   border-radius: 5px;
   code {
@@ -203,6 +200,18 @@ pre {
     font-size: 100%;
     color: inherit;
     background-color: transparent;
+  }
+}
+
+.highlight {
+  pre {
+    overflow-x: auto;
+    code {
+      white-space: pre;
+      * {
+        white-space: nowrap;
+      }
+    }
   }
 }
 
